other/limit-containers-per-pod/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod02
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod03
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod04
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod05
      image: ghcr.io/kyverno/test-busybox:1.35
