other/limit-containers-per-pod/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod02
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod03
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod04
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod02
      image: ghcr.io/kyverno/test-busybox:1.35
