other/limit-containers-per-pod/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: bb01
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: bb02
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: bb03
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: bb04
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: bb05
        image: ghcr.io/kyverno/test-busybox:1.35
